fix popup z-index

--- a/scss/modules/_navbar.scss
+++ b/scss/modules/_navbar.scss
@@ -54,3 +54,7 @@ input.search {
   font-weight: normal;
   line-height: 1;
 }
+
+.oo-ui-popupWidget-popup {
+  z-index:999;
+}
